set memory_limit, display_errors, Dynamic Extensions and date.timezone

--- a/cookbooks/phpdev/templates/default/php.ini
+++ b/cookbooks/phpdev/templates/default/php.ini
@@ -403,7 +403,7 @@ max_input_time = 60
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 128M
+memory_limit = 512M
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -476,7 +476,7 @@ error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/display-errors
-display_errors = Off
+display_errors = On
 
 ; The display of errors which occur during PHP's startup sequence are handled
 ; separately from display_errors. PHP's default behavior is to suppress those
@@ -864,6 +864,11 @@ default_socket_timeout = 60
 ; If you only provide the name of the extension, PHP will look for it in its
 ; default extension directory.
 ;
+zend_extension=/usr/lib/php5/20121212/xdebug.so
+extension=xhprof.so
+extension=mongo.so
+extension=zmq.so
+extension=gearman.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
@@ -876,7 +881,7 @@ cli_server.color = On
 [Date]
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
-;date.timezone =
+date.timezone = <%= node['php']['date']['timezone'] %>
 
 ; http://php.net/date.default-latitude
 ;date.default_latitude = 31.7667
