--- a/cookbooks/default/files/default/000-default.conf
+++ b/cookbooks/default/files/default/000-default.conf
@@ -1,3 +1,5 @@
+ServerSignature Off
+
 <VirtualHost *:80>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
