--- a/cookbooks/default/files/default/000-default.conf
+++ b/cookbooks/default/files/default/000-default.conf
@@ -1,4 +1,5 @@
 ServerSignature Off
+ServerTokens Prod
 
 <VirtualHost *:80>
 	# The ServerName directive sets the request scheme, hostname and port that
